--- a/Planet A.html
+++ b/Planet A.html
@@ -14,10 +14,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body class="bg-bgfarve">
 <div class="container m-0">
     <div>
-        <h1>Hej</h1>
+        <h1 class="text-hvid">Hej</h1>
     </div>
 </div>
 
