--- a/Planet A.html
+++ b/Planet A.html
@@ -15,9 +15,30 @@
 </head>
 
 <body class="bg-bgfarve">
-<div class="container m-0">
-    <div>
-        <h1 class="text-hvid">Hej</h1>
+<div class="container">
+    <div class="row align-content-around d-flex">
+        <div class="col-12">
+            <h1 class="text-hvid display-1 justify-content-center d-flex">Velkommen til Planet A</h1>
+        </div>
+
+        <div class="col-12">
+            <div class="row align-content-around d-flex">
+                <div class="col-6">
+                    <h3 class="text-hvid">Vær med til at passe på vores planet, der er kun en!
+                        Planet A giver dig mulighed for at få større viden om hvordan vi  kan passe på miljøet.
+                        Du får uddelt din egen planet, som du har ansvaret for at passe på.
+                        Hver dag får du klimamissioner, som er små eller større tiltag du kan gøre i din hverdag for at blive mere klima og miljø bevidst.
+                        Jo flere klimamissioner du klare, jo flere gladere bliver din planet og jo flere point får du.</h3>
+                </div>
+
+                <div class="col-6">
+                    <div class="d-grid gap-2 col-6 mx-auto">
+                        <button class="btn btn-grå text-hvid" type="button">Opret Profil</button>
+                        <button class="btn btn-grå text-hvid" type="button">Log ind</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
