--- a/Planet A.html
+++ b/Planet A.html
@@ -34,7 +34,7 @@
                 <div class="col-6">
                     <div class="d-grid gap-2 col-6 mx-auto">
                         <button class="btn btn-grå text-hvid" type="button">Opret Profil</button>
-                        <button class="btn btn-grå text-hvid" type="button">Log ind</button>
+                        <button class="btn btn-grå text-hvid" type="button">Log in</button>
                     </div>
                 </div>
             </div>
