--- a/Planet A.html
+++ b/Planet A.html
@@ -15,14 +15,17 @@
 </head>
 
 <body class="bg-bgfarve">
-<div class="container">
+<div class="container container-fluid">
     <div class="row align-content-around d-flex">
-        <div class="col-12">
-            <h1 class="text-hvid display-1 justify-content-center d-flex">Velkommen til Planet A</h1>
+        <div class="col-12 ">
+            <h1 class="text-hvid display-1 justify-content-center d-flex m-5 pt-5" style="font-size: clamp(3rem, 8vw, 25rem);">
+                Velkommen til Planet A
+            </h1>
+
         </div>
 
         <div class="col-12">
-            <div class="row align-content-around d-flex">
+            <div class="row align-content-around d-flex m-3 ps-4">
                 <div class="col-6">
                     <h3 class="text-hvid">Vær med til at passe på vores planet, der er kun en!
                         Planet A giver dig mulighed for at få større viden om hvordan vi  kan passe på miljøet.
@@ -31,10 +34,10 @@
                         Jo flere klimamissioner du klare, jo flere gladere bliver din planet og jo flere point får du.</h3>
                 </div>
 
-                <div class="col-6">
-                    <div class="d-grid gap-2 col-6 mx-auto">
-                        <button class="btn btn-grå text-hvid" type="button">Opret Profil</button>
-                        <button class="btn btn-grå text-hvid" type="button">Log ind</button>
+                <div class="btn col-xl-6 col-lg-5 d-flex justify-content-end ">
+                    <div class="d-grid gap-2 col-6 pt-4 pb-4">
+                        <button class="btn btn-grå text-hvid mb-5 fs-4" type="button">Opret Profil</button>
+                        <button class="btn btn-grå text-hvid mb-5 fs-4" type="button">Log ind</button>
                     </div>
                 </div>
             </div>
