--- a/underside.html
+++ b/underside.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div>
         <a href="underside.html">
-        <img src="img/baggrund.webp" alt="baggrund">
+        <img src="image/baggrund.webp" alt="baggrund">
         </a>
     </div>
 
