--- a/Planet A.html
+++ b/Planet A.html
@@ -18,24 +18,24 @@
 <div class="container container-fluid">
     <div class="row align-content-around d-flex">
         <div class="col-12 ">
-            <h1 class="text-hvid display-1 justify-content-center d-flex m-5 pt-5" style="font-size: clamp(3rem, 8vw, 25rem);">
+            <h1 class="text-hvid display-1 justify-content-center d-flex mt-5 mb-3 pt-5" style="font-size: clamp(3rem, 8vw, 25rem);">
                 Velkommen til Planet A
             </h1>
 
         </div>
 
         <div class="col-12">
-            <div class="row align-content-around d-flex m-3 ps-4">
-                <div class="col-6">
-                    <h3 class="text-hvid">Vær med til at passe på vores planet, der er kun en!
+            <div class="row align-content-around d-flex ps-4">
+                <div class="col-xl-8 col-lg-6 col-md-5 justify-content-center">
+                    <h3 class="text-hvid">Vær med til at passe på vores planet, der er kun en! <br>
                         Planet A giver dig mulighed for at få større viden om hvordan vi  kan passe på miljøet.
-                        Du får uddelt din egen planet, som du har ansvaret for at passe på.
-                        Hver dag får du klimamissioner, som er små eller større tiltag du kan gøre i din hverdag for at blive mere klima og miljø bevidst.
+                        Du får uddelt din egen planet, som du har ansvaret for at passe på.<br>
+                        Hver dag får du klimamissioner, som er små eller større tiltag du kan gøre i din hverdag for at blive mere klima og miljø bevidst.<br>
                         Jo flere klimamissioner du klare, jo flere gladere bliver din planet og jo flere point får du.</h3>
                 </div>
 
-                <div class="btn col-xl-6 col-lg-5 d-flex justify-content-end ">
-                    <div class="d-grid gap-2 col-6 pt-4 pb-4">
+                <div class="btn col-xl-4 col-lg-4 d-flex justify-content-center">
+                    <div class="d-grid gap-2 col-6 ">
                         <button class="btn btn-grå text-hvid mb-5 fs-4" type="button">Opret Profil</button>
                         <button class="btn btn-grå text-hvid mb-5 fs-4" type="button">Log ind</button>
                     </div>
