--- a/underside.html
+++ b/underside.html
@@ -3,15 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Underside</title>
+
+    <meta name="robots" content="All">
+    <meta name="author" content="Udgiver">
+    <meta name="copyright" content="Information om copyright">
+
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="bg-bgfarve">
 <div class="container">
-    <div>
+    <div class="m-0">
         <a href="underside.html">
-        <img src="image/baggrund.webp" alt="baggrund">
+        <img src="image/baggrund.png" alt="baggrund">
         </a>
     </div>
 
 </div>
+
+<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+
+
+</script>
+
 </body>
 </html>
