--- a/underside.html
+++ b/underside.html
@@ -13,14 +13,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="bg-bgfarve">
-<div class="container">
-    <div class="m-0">
-        <a href="underside.html">
-        <img src="image/baggrund.png" alt="baggrund">
-        </a>
+<div class="container-fluid">
+    <div class="planet">
+    <img src="image/Planet1000.webp" alt="planet">
     </div>
-
 </div>
+
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script>
