--- a/Planet A.html
+++ b/Planet A.html
@@ -15,6 +15,12 @@
 </head>
 
 <body class="bg-bgfarve">
+
+<div class="container container-fluid">
+    <a href="#">
+        <img src="image/" alt="baggrund">
+    </a>
+</div>
 <div class="container container-fluid">
     <div class="row align-content-around d-flex">
         <div class="col-12 ">
@@ -26,7 +32,7 @@
 
         <div class="col-12">
             <div class="row align-content-around d-flex ps-4">
-                <div class="col-xl-8 col-lg-6 col-md-5 justify-content-center">
+                <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 justify-content-center">
                     <h3 class="text-hvid">Vær med til at passe på vores planet, der er kun en! <br>
                         Planet A giver dig mulighed for at få større viden om hvordan vi  kan passe på miljøet.
                         Du får uddelt din egen planet, som du har ansvaret for at passe på.<br>
@@ -34,7 +40,7 @@
                         Jo flere klimamissioner du klare, jo flere gladere bliver din planet og jo flere point får du.</h3>
                 </div>
 
-                <div class="btn col-xl-4 col-lg-4 d-flex justify-content-center">
+                <div class="btn col-xl-4 col-lg-6 d-flex justify-content-center">
                     <div class="d-grid gap-2 col-6 ">
                         <button class="btn btn-grå text-hvid mb-5 fs-4" type="button">Opret Profil</button>
                         <button class="btn btn-grå text-hvid mb-5 fs-4" type="button">Log ind</button>
