--- a/Planet A.html
+++ b/Planet A.html
@@ -18,7 +18,7 @@
 
 <div class="container container-fluid">
     <a href="#">
-        <img src="image/logo.webp" alt="baggrund">
+        <img src="image/logo%20f.webp" alt="baggrund">
     </a>
 </div>
 <div class="container container-fluid">
