--- a/Planet A.html
+++ b/Planet A.html
@@ -16,15 +16,17 @@
 
 <body class="bg-bgfarve">
 
-<div class="container container-fluid">
-    <a href="#">
-        <img src="image/Logo.webp" alt="baggrund">
-    </a>
+<div class="container container-fluid m-0">
+    <div class="d-flex ps-3 pt-4">
+        <a href="#">
+            <img src="image/Logo.webp" alt="baggrund">
+        </a>
+    </div>
 </div>
 <div class="container container-fluid">
     <div class="row align-content-around d-flex">
         <div class="col-12 ">
-            <h1 class="text-hvid display-1 justify-content-center d-flex mt-5 mb-3 pt-5" style="font-size: clamp(3rem, 8vw, 25rem);">
+            <h1 class="titel1 text-hvid display-1 justify-content-center d-flex mt-5 mb-3 pt-2" style="font-size: clamp(3rem, 8vw, 25rem);">
                 Velkommen til Planet A
             </h1>
 
@@ -33,7 +35,7 @@
         <div class="col-12">
             <div class="row align-content-around d-flex ps-4">
                 <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 justify-content-center">
-                    <h3 class="text-hvid">Vær med til at passe på vores planet, der er kun en! <br>
+                    <h3 class="text1 text-hvid">Vær med til at passe på vores planet, der er kun en! <br>
                         Planet A giver dig mulighed for at få større viden om hvordan vi  kan passe på miljøet.
                         Du får uddelt din egen planet, som du har ansvaret for at passe på.<br>
                         Hver dag får du klimamissioner, som er små eller større tiltag du kan gøre i din hverdag for at blive mere klima og miljø bevidst.<br>
@@ -41,9 +43,9 @@
                 </div>
 
                 <div class="btn col-xl-4 col-lg-6 d-flex justify-content-center">
-                    <div class="d-grid gap-2 col-6 ">
-                        <button class="btn btn-grå text-hvid mb-5 fs-4" type="button">Opret Profil</button>
-                        <button class="btn btn-grå text-hvid mb-5 fs-4" type="button">Log ind</button>
+                    <div class="d-grid gap-2 col-6">
+                        <button class="btn btntekst btn-grå text-hvid mb-5 fs-4" type="button">Opret Profil</button>
+                        <button class="btn btntekst btn-grå text-hvid mb-5 fs-4" type="button">Log ind</button>
                     </div>
                 </div>
             </div>
