--- a/Planet A.html
+++ b/Planet A.html
@@ -12,6 +12,8 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
 </head>
 
 <body class="bg-bgfarve">
@@ -23,8 +25,8 @@
 </div>
 <div class="container container-fluid">
     <div class="row align-content-around d-flex">
-        <div class="col-12 ">
-            <h1 class="text-hvid display-1 justify-content-center d-flex mt-5 mb-3 pt-5" style="font-size: clamp(3rem, 8vw, 25rem);">
+        <div class="col-12 overskrift ">
+            <h1 class="overskrift text-hvid display-1 justify-content-center d-flex mt-5 mb-3 pt-5" style="font-size: clamp(3rem, 8vw, 25rem);">
                 Velkommen til Planet A
             </h1>
 
@@ -54,9 +56,6 @@
 
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-
-
-</script>
+<script>src="js/java.js"</script>
 </body>
 </html>
