--- a/underside.html
+++ b/underside.html
@@ -11,12 +11,16 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
 </head>
 <body class="bg-bgfarve">
 <div class="container">
     <nav class="navbar navbar-dark bg-bgfarve fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Offcanvas dark navbar</a>
+            <img src="image/Logo.webp" alt="logo">
+            <button type="button" class="btn btn-outline-grå text-hvid btn-lg">Hjælp din planet</button>
+            <li class="nav-item">
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -53,14 +57,17 @@
                     </form>
                 </div>
             </div>
+
         </div>
     </nav>
+    <br> <br> <br>  <br>  <br>  <br>
     <div class="planet justify-content-center d-flex align-items-center">
     <img src="image/Planet1000.webp" alt="planet" class="img-fluid">
     </div>
+    <br>  <br>
     <div>
     <div class="d-grid gap-2 col-lg-4 col-md-4 mx-auto">
-        <button class="btn btn-grøn text-hvid" type="button" >Dagens klimamissioner</button>
+        <button class="btn btn-grøn text-hvid btn-lg" type="button" >Dagens klimamissioner</button>
     </div>
     </div>
 </div>
