--- a/Planet A.html
+++ b/Planet A.html
@@ -9,30 +9,42 @@
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
 
+    <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
+    <link rel="stylesheet" href="https://use.typekit.net/tvt8pmf.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
 </head>
 
 <body class="bg-bgfarve">
 
-<div class="container container-fluid">
-    <a href="#">
-        <img src="image/Logo.webp" alt="baggrund">
-    </a>
+<div class="container container-fluid m-0">
+    <div class="pt-4 ps-4">
+        <a href="Planet%20A.html">
+            <img src="image/Logo.webp" alt="baggrund">
+        </a>
+    </div>
 </div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <h1 class="overskrift text-hvid display-1 d-flex mt-5 mb-3 pt-2" style="font-size: clamp(3rem, 8vw, 25rem);">
+                Velkommen til <br class="d-lg-none"> Planet A
+            </h1>
+        </div>
+    </div>
+</div>
+
 <div class="container container-fluid">
     <div class="row align-content-around d-flex">
         <div class="col-12 overskrift">
-            <h1 class="overskrift text-hvid display-1 justify-content-center d-flex mt-5 mb-3 pt-5" style="font-size: clamp(3rem, 8vw, 25rem);">
+            <h1 class="overskrift text-hvid display-1 justify-content-center d-flex mt-5 mb-3 pt-2" style="font-size: clamp(3rem, 8vw, 25rem);">
                 Velkommen til Planet A
             </h1>
 
         </div>
 
-        <div class="col-12">
+        <div class="">
             <div class="row align-content-around d-flex ps-4">
                 <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 justify-content-center">
                     <h3 class="text-hvid">Vær med til at passe på vores planet, der er kun en! <br>
@@ -42,10 +54,18 @@
                         Jo flere klimamissioner du klare, jo flere gladere bliver din planet og jo flere point får du.</h3>
                 </div>
 
-                <div class="btn col-xl-4 col-lg-6 d-flex justify-content-center">
-                    <div class="d-grid gap-2 col-6 ">
-                        <button class="btn btn-grå text-hvid mb-5 fs-4" type="button">Opret Profil</button>
-                        <button class="btn btn-grå text-hvid mb-5 fs-4" type="button">Log ind</button>
+                <div class="btn col-3 col-xl-2 col-lg-3 d-flex justify-content-center">
+                    <div class="d-grid gap-2 col-6">
+                        <div class="">
+                            <a href="underside.html" class="">
+                                <button class="btn btn-grå text-hvid fs-4 p-4" type="button">Opret Profil</button>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="underside.html">
+                                <button class="btn btn-grå text-hvid fs-4 pb-4 pt-4 ps-5 pe-5" type="button">Log ind</button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
