--- a/underside.html
+++ b/underside.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <title>Underside</title>
@@ -16,7 +16,7 @@
 </head>
 <body class="bg-bgfarve">
 <div class="container">
-    <nav class="navbar navbar-dark bg-bgfarve fixed-top">
+    <nav class="navbar navbar-dark bg-bgfarve fixed-top border-white">
         <div class="container-fluid">
             <img src="image/Logo.webp" alt="logo">
             <button type="button" class="btn btn-outline-grå text-hvid btn-lg">Hjælp din planet</button>
@@ -32,10 +32,10 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#">Min profil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">Find venner</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -60,14 +60,18 @@
 
         </div>
     </nav>
-    <br> <br> <br>  <br>  <br>  <br>
+    <br> <br> <br>  <br>  <br>
+    <div>
+        <h1 class="text-orange justify-content-center d-flex">1000</h1>
+        <h3 class="text-hvid justify-content-center d-flex">Point</h3>
+    </div>
     <div class="planet justify-content-center d-flex align-items-center">
     <img src="image/Planet1000.webp" alt="planet" class="img-fluid">
     </div>
-    <br>  <br>
+    <br>
     <div>
     <div class="d-grid gap-2 col-lg-4 col-md-4 mx-auto">
-        <button class="btn btn-grøn text-hvid btn-lg" type="button" >Dagens klimamissioner</button>
+        <button class="btn btn-grøn text-hvid btn-lg" type="button" ><h2>Dagens klimamissioner</h2></button>
     </div>
     </div>
 </div>
