--- a/underside.html
+++ b/underside.html
@@ -8,11 +8,13 @@
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
 
+    <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
+    <link rel="stylesheet" href="https://use.typekit.net/tvt8pmf.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
+
 </head>
 <body class="bg-bgfarve baggrund">
 <div class="container">
