--- a/tjekliste.html
+++ b/tjekliste.html
@@ -62,40 +62,33 @@
     </nav>
     <br> <br> <br>  <br>  <br>
 
-    <div class="planet d-flex align-items-center col-4">
+    <div class="planet d-flex align-items-center row row-cols-4">
         <img src="image/Planet10002.webp" alt="planet" class="img-fluid justify-content-md-start d-flex">
 
-    <ol class="list-group list-group-numbered col-10 ">
-        <li class="list-group-item d-flex align-items-start">
+    <ol class="list-group list-group-numbered row row-cols-8">
+        <li class="list-group-item d-flex align-items-start bg-graa">
             <div class="ms-2 me-auto">
-                <div class="fw-bold">Købte ind med mit eget net</div>
+                <div class="fw-bold text-hvid">Købte ind med mit eget net</div>
                 Content for list item
             </div>
-            <span class="badge text-bg-grå rounded-pill">14</span>
+            <span class="badge text-bg-hvid rounded-pill">14</span>
         </li>
-        <li class="list-group-item d-flex justify-content-between align-items-start">
+        <li class="list-group-item d-flex justify-content-between align-items-start bg-graa">
             <div class="ms-2 me-auto">
-                <div class="fw-bold">Subheading</div>
+                <div class="fw-bold text-hvid">Brugte egen drikkedunk</div>
                 Content for list item
             </div>
-            <span class="badge text-bg-primary rounded-pill">14</span>
+            <span class="badge text-bg-hvid rounded-pill">14</span>
         </li>
-        <li class="list-group-item d-flex justify-content-between align-items-start">
+        <li class="list-group-item d-flex justify-content-between align-items-start bg-graa">
             <div class="ms-2 me-auto">
-                <div class="fw-bold">Subheading</div>
-                Content for list item
+                <div class="fw-bold text-hvid">Jeg gik/cyklede i dag</div>
             </div>
-            <span class="badge text-bg-primary rounded-pill">14</span>
+            <span class="badge text-bg-hvid rounded-pill">14</span>
         </li>
     </ol>
 </div>
 </div>
-
-
-
-
-
-
 
 
 
