--- a/Planet A.html
+++ b/Planet A.html
@@ -27,46 +27,42 @@
 </div>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 overskrift">
-            <h1 class="overskrift text-hvid display-1 d-flex mt-5 mb-3 pt-2" style="font-size: clamp(3rem, 8vw, 25rem);">
-                Velkommen til <br class="d-lg-none"> Planet A
+        <div class="col-12 overskrift d-flex">
+            <h1 class="overskrift text-hvid display-1 d-flex mt-5 mb-3 pt-2 " style="font-size: clamp(3rem, 8vw, 25rem);">
+                Velkommen til <br class="d-sm-none"> Planet A
             </h1>
         </div>
     </div>
 </div>
 
 <div class="container container-fluid">
-    <div class="row align-content-around d-flex">
+    <div class="row align-items-center">
+        <!-- Tekstkolonne -->
+        <div class="col-lg-8 col-md-7 col-sm-12">
+            <h3 class="tekst text-hvid">
+                Vær med til at passe på vores planet, der er kun en! <br>
+                Planet A giver dig mulighed for at få større viden om hvordan vi kan passe på miljøet.
+                Du får uddelt din egen planet, som du har ansvaret for at passe på.<br>
+                Hver dag får du klimamissioner, som er små eller større tiltag du kan gøre i din hverdag
+                for at blive mere klima og miljø bevidst.<br>
+                Jo flere klimamissioner du klare, jo flere gladere bliver din planet og jo flere point får du.
+            </h3>
+        </div>
 
 
-        <div class="">
-            <div class="row align-content-around d-flex ps-4">
-                <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 justify-content-center">
-                    <h3 class="text-hvid">Vær med til at passe på vores planet, der er kun en! <br>
-                        Planet A giver dig mulighed for at få større viden om hvordan vi  kan passe på miljøet.
-                        Du får uddelt din egen planet, som du har ansvaret for at passe på.<br>
-                        Hver dag får du klimamissioner, som er små eller større tiltag du kan gøre i din hverdag for at blive mere klima og miljø bevidst.<br>
-                        Jo flere klimamissioner du klare, jo flere gladere bliver din planet og jo flere point får du.</h3>
-                </div>
-
-                <div class="btn col-3 col-xl-2 col-lg-3 d-flex justify-content-center">
-                    <div class="d-grid gap-2 col-6">
-                        <div class="">
-                            <a href="underside.html" class="">
-                                <button class="btn btn-grå text-hvid fs-4 p-4" type="button">Opret Profil</button>
-                            </a>
-                        </div>
-                        <div>
-                            <a href="underside.html">
-                                <button class="btn btn-grå text-hvid fs-4 pb-4 pt-4 ps-5 pe-5" type="button">Log ind</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+        <div class="col-lg-4 col-md-5 col-sm-12 d-flex justify-content-md-center mt-3 mt-md-0">
+            <div class="btn-container">
+                <a href="underside.html">
+                    <button class="btn btn-graa text-hvid fs-4 px-4 py-3" type="button">Opret Profil</button>
+                </a>
+                <a href="underside.html">
+                    <button class="btn btn-graa text-hvid fs-4 px-4 py-3 ms-md-3 mt-md-0 mt-3" type="button">Log ind</button>
+                </a>
             </div>
         </div>
     </div>
 </div>
+
 
 
 
