--- a/tjekliste.html
+++ b/tjekliste.html
@@ -13,13 +13,13 @@
 
     <link rel="stylesheet" href="https://use.typekit.net/fzx5twy.css">
 </head>
-<body class="bg-bgfarve">
+<body class="bg-bgfarve baggrund">
 
 <div class="container">
     <nav class="navbar navbar-dark bg-bgfarve fixed-top border-white">
         <div class="container-fluid">
             <img src="image/Logo.webp" alt="logo">
-            <button type="button" class="btn btn-outline-grå text-hvid btn-lg">Hjælp din planet</button>
+            <button type="button" class="btn btn-outline-graa text-hvid btn-lg">Hjælp din planet</button>
             <li class="nav-item">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -62,31 +62,66 @@
     </nav>
     <br> <br> <br>  <br>  <br>
 
-    <div class="planet d-flex align-items-center row row-cols-4">
+    <div class="d-flex align-items-start gap-5">
+    <div class="planet">
         <img src="image/Planet10002.webp" alt="planet" class="img-fluid justify-content-md-start d-flex">
+    </div>
 
-    <ol class="list-group list-group-numbered row row-cols-8">
-        <li class="list-group-item d-flex align-items-start bg-graa">
-            <div class="ms-2 me-auto">
-                <div class="fw-bold text-hvid">Købte ind med mit eget net</div>
-                Content for list item
+    <div>
+        <div class="card">
+            <div class="card-body bg-graa" style="border: none;">
+                <h4 class="justify-content-center d-flex text-hvid">Dagens klimamissioner</h4>
             </div>
-            <span class="badge text-bg-hvid rounded-pill">14</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-start bg-graa">
-            <div class="ms-2 me-auto">
-                <div class="fw-bold text-hvid">Brugte egen drikkedunk</div>
-                Content for list item
-            </div>
-            <span class="badge text-bg-hvid rounded-pill">14</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-start bg-graa">
-            <div class="ms-2 me-auto">
-                <div class="fw-bold text-hvid">Jeg gik/cyklede i dag</div>
-            </div>
-            <span class="badge text-bg-hvid rounded-pill">14</span>
-        </li>
-    </ol>
+        </div>
+        <br>
+    <div class="card card1 d-flex">
+        <div class="card-body bg-graa">
+            <li class="list-group-item d-flex align-items-start bg-hvid rounded-5" style="padding: 20px;">
+                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold text-graa">Købte ind med mit eget net</div>
+
+                </div>
+                <span class="badge text-bg-groen rounded-pill">+75</span>
+            </li>
+            <br>
+            <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
+                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold text-graa">Brugte egen drikkedunk</div>
+
+                </div>
+                <span class="badge text-bg-groen rounded-pill">+100</span>
+            </li>
+            <br>
+            <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
+                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold text-graa">Jeg gik/cyklede i dag</div>
+                </div>
+                <span class="badge text-bg-groen rounded-pill">+90</span>
+            </li>
+            <br>
+            <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
+                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold text-graa">Jeg spiste rester</div>
+                </div>
+                <span class="badge text-bg-groen rounded-pill">+80</span>
+            </li>
+            <br>
+            <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
+                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold text-graa">Købte genbrug</div>
+                </div>
+                <span class="badge text-bg-groen rounded-pill">+85</span>
+            </li>
+            <br>
+            <button type="button" class="btn btn-blaa justify-content-end d-flex">Færdig</button>
+        </div>
+    </div>
+    </div>
 </div>
 </div>
 
