--- a/underside.html
+++ b/underside.html
@@ -21,7 +21,7 @@
             <a href="#">
                 <img src="image/Logo.webp" alt="logo">
             </a>
-            <button type="button" class="btn btn-outline-grå text-hvid btn-lg">Hjælp din planet</button>
+            <button type="button" class="btn btn-outline-graa text-hvid btn-lg">Hjælp din planet</button>
             <li class="nav-item">
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -73,7 +73,7 @@
     <br>
     <div>
     <div class="d-grid gap-2 col-lg-4 col-md-4 mx-auto">
-        <button class="btn btn-grøn text-hvid btn-lg" type="button" ><h2>Dagens klimamissioner</h2></button>
+        <button class="btn btn-groen text-hvid btn-lg" type="button" ><h2>Dagens klimamissioner</h2></button>
     </div>
     </div>
 </div>
