--- a/tjekliste.html
+++ b/tjekliste.html
@@ -62,66 +62,75 @@
     </nav>
     <br> <br> <br>  <br>  <br>
 
-    <div class="d-flex align-items-start gap-5">
-    <div class="planet">
-        <img src="image/Planet10002.webp" alt="planet" class="img-fluid justify-content-md-start d-flex">
-    </div>
+    <div class="container">
+        <div class="row align-items-start">
 
-    <div>
-        <div class="card">
-            <div class="card-body bg-graa" style="border: none;">
-                <h4 class="justify-content-center d-flex text-hvid">Dagens klimamissioner</h4>
+            <div class="col-md-6 d-flex justify-content-center">
+                <div class="planet">
+                    <img src="image/Planet10002.webp" alt="planet" class="img-fluid">
+                </div>
+            </div>
+
+
+            <div class="col-md-6">
+
+                <div class="card mb-3">
+                    <div class="card-body bg-graa" style="border: none;">
+                        <h4 class="text-center text-hvid">Dagens klimamissioner</h4>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-body bg-graa">
+
+                        <li class="list-group-item d-flex align-items-start bg-hvid rounded-5" style="padding: 20px;">
+                            <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
+                            <div class="ms-2 me-auto">
+                                <div class="fw-bold text-graa">Købte ind med mit eget net</div>
+                            </div>
+                            <span class="badge text-bg-groen rounded-pill">+75</span>
+                        </li>
+                        <br>
+                        <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
+                            <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="secondCheckbox">
+                            <div class="ms-2 me-auto">
+                                <div class="fw-bold text-graa">Brugte egen drikkedunk</div>
+                            </div>
+                            <span class="badge text-bg-groen rounded-pill">+100</span>
+                        </li>
+                        <br>
+                        <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
+                            <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="thirdCheckbox">
+                            <div class="ms-2 me-auto">
+                                <div class="fw-bold text-graa">Jeg gik/cyklede i dag</div>
+                            </div>
+                            <span class="badge text-bg-groen rounded-pill">+90</span>
+                        </li>
+                        <br>
+                        <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
+                            <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="fourthCheckbox">
+                            <div class="ms-2 me-auto">
+                                <div class="fw-bold text-graa">Jeg spiste rester</div>
+                            </div>
+                            <span class="badge text-bg-groen rounded-pill">+80</span>
+                        </li>
+                        <br>
+                        <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
+                            <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="fifthCheckbox">
+                            <div class="ms-2 me-auto">
+                                <div class="fw-bold text-graa">Købte genbrug</div>
+                            </div>
+                            <span class="badge text-bg-groen rounded-pill">+85</span>
+                        </li>
+                        <br>
+                        <button type="button" class="btn btn-blaa w-25 text-hvid">Færdig</button>
+                    </div>
+                </div>
             </div>
         </div>
-        <br>
-    <div class="card card1 d-flex">
-        <div class="card-body bg-graa">
-            <li class="list-group-item d-flex align-items-start bg-hvid rounded-5" style="padding: 20px;">
-                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold text-graa">Købte ind med mit eget net</div>
-
-                </div>
-                <span class="badge text-bg-groen rounded-pill">+75</span>
-            </li>
-            <br>
-            <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
-                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold text-graa">Brugte egen drikkedunk</div>
-
-                </div>
-                <span class="badge text-bg-groen rounded-pill">+100</span>
-            </li>
-            <br>
-            <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
-                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold text-graa">Jeg gik/cyklede i dag</div>
-                </div>
-                <span class="badge text-bg-groen rounded-pill">+90</span>
-            </li>
-            <br>
-            <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
-                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold text-graa">Jeg spiste rester</div>
-                </div>
-                <span class="badge text-bg-groen rounded-pill">+80</span>
-            </li>
-            <br>
-            <li class="list-group-item d-flex justify-content-between align-items-start bg-hvid rounded-5" style="padding: 20px;">
-                <input class="form-check-input me-1 bg-graa" type="checkbox" value="" id="firstCheckbox">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold text-graa">Købte genbrug</div>
-                </div>
-                <span class="badge text-bg-groen rounded-pill">+85</span>
-            </li>
-            <br>
-            <button type="button" class="btn btn-blaa justify-content-end d-flex">Færdig</button>
-        </div>
     </div>
-    </div>
+
 </div>
 </div>
 
