--- a/underside.html
+++ b/underside.html
@@ -16,7 +16,7 @@
 </head>
 <body class="bg-bgfarve baggrund">
 <div class="container">
-    <nav class="navbar navbar-dark bg-bgfarve fixed-top border-white">
+    <nav class="navbar navbar-dark bg-bgfarve fixed-top">
         <div class="container-fluid">
             <a href="#">
                 <img src="image/Logo.webp" alt="logo">
