--- a/Planet A.html
+++ b/Planet A.html
@@ -18,15 +18,16 @@
 
 <body class="bg-bgfarve">
 
-<div class="container container-fluid m-0">
-    <div class="pt-4 ps-4">
+<div class="container container-fluid m-0 d-flex">
+    <div class="pt-lg-4 ps-lg-4 pt-md-4 ps-md-4 d-flex">
         <a href="Planet%20A.html">
-            <img src="image/Logo.webp" alt="baggrund">
+            <img src="image/Logo.webp" alt="baggrund" class="img-fluid">
         </a>
     </div>
 </div>
-<div class="container-fluid">
-    <div class="row">
+
+<div class="container-fluid d-flex justify-content-lg-center justify-content-md-center  ">
+    <div class="row ">
         <div class="col-12 overskrift d-flex">
             <h1 class="overskrift text-hvid display-1 d-flex mt-5 mb-3 pt-2 " style="font-size: clamp(3rem, 8vw, 25rem);">
                 Velkommen til <br class="d-sm-none"> Planet A
@@ -35,11 +36,10 @@
     </div>
 </div>
 
-<div class="container container-fluid">
-    <div class="row align-items-center">
-        <!-- Tekstkolonne -->
-        <div class="col-lg-8 col-md-7 col-sm-12">
-            <h3 class="tekst text-hvid">
+<div class="container justify-content-lg-center">
+    <div class="row">
+        <div class="col-lg-8 col-md-8 col-sm-12">
+            <h3 class="tekst text-hvid ms-lg-3">
                 Vær med til at passe på vores planet, der er kun en! <br>
                 Planet A giver dig mulighed for at få større viden om hvordan vi kan passe på miljøet.
                 Du får uddelt din egen planet, som du har ansvaret for at passe på.<br>
@@ -50,18 +50,18 @@
         </div>
 
 
-        <div class="col-lg-4 col-md-5 col-sm-12 d-flex justify-content-md-center mt-3 mt-md-0">
-            <div class="btn-container">
-                <a href="underside.html">
-                    <button class="btn btn-graa text-hvid fs-4 px-4 py-3" type="button">Opret Profil</button>
-                </a>
-                <a href="underside.html">
-                    <button class="btn btn-graa text-hvid fs-4 px-4 py-3 ms-md-3 mt-md-0 mt-3" type="button">Log ind</button>
-                </a>
-            </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 d-flex flex-xl-column flex-lg-column flex-md-column flex-sm-row justify-content-center align-items-center">
+            <a href="underside.html">
+                <button class="btn btn-graa text-hvid fs-4 ps-lg-4 pe-lg-4 pt-lg-3 pb-lg-3 mb-lg-5 ps-md-3 pe-md-3 pt-md-3 pb-md-3 mb-md-5 m-sm-4 m-2" type="button">Opret Profil</button>
+            </a>
+
+            <a href="underside.html">
+                <button class="btn btn-graa text-hvid fs-4 ps-lg-5 pe-lg-5 pt-lg-3 pb-lg-3 ps-md-5 pe-md-5 pt-md-3 pb-md-3 mb-md-5 m-sm-4 m-2" type="button">Log ind</button>
+            </a>
         </div>
     </div>
 </div>
+
 
 
 
