--- a/tjekliste.html
+++ b/tjekliste.html
@@ -18,7 +18,7 @@
 <div class="container">
     <nav class="navbar navbar-dark bg-bgfarve fixed-top border-white">
         <div class="container-fluid">
-            <img src="image/Logo.webp" alt="logo">
+            <img src="image/logo%20h.webp" alt="logo">
             <button type="button" class="btn btn-outline-grå text-hvid btn-lg">Hjælp din planet</button>
             <li class="nav-item">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
