--- a/Planet A.html
+++ b/Planet A.html
@@ -19,9 +19,9 @@
 <body class="bg-bgfarve">
 
 <div class="container container-fluid m-0 d-flex">
-    <div class="pt-lg-4 ps-lg-4 pt-md-4 ps-md-4 d-flex">
+    <div class=" d-flex">
         <a href="Planet%20A.html">
-            <img src="image/Logo.webp" alt="baggrund" class="img-fluid">
+            <img src="image/logo%20h.webp" alt="baggrund" class="img-fluid">
         </a>
     </div>
 </div>
