--- a/underside.html
+++ b/underside.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-dark bg-bgfarve fixed-top border-white">
         <div class="container-fluid">
             <a href="#">
-                <img src="image/Logo.webp" alt="logo">
+                <img src="image/logo%20h.webp" alt="logo">
             </a>
             <button type="button" class="btn btn-outline-grå text-hvid btn-lg">Hjælp din planet</button>
             <li class="nav-item">
