--- a/underside.html
+++ b/underside.html
@@ -88,7 +88,7 @@
 <div>
     <div class="d-grid gap-2 col-lg-4 col-md-4 mx-auto">
         <button class="btn btn-grøn text-hvid btn-lg" type="button">
-            <h2>Dagens klimamissioner</h2>
+            Dagens klimamissioner
         </button>
     </div>
 </div>
