--- a/checkliste.html
+++ b/checkliste.html
@@ -74,14 +74,14 @@
 
             <div class="col-md-6">
 
-                <div class="card mb-3">
-                    <div class="card-body bg-graa" style="border: none;">
+                <div class="card mb-3" style="border: none">
+                    <div class="card-body bg-graa">
                         <h4 class="text-center text-hvid">Dagens klimamissioner</h4>
                     </div>
                 </div>
 
 
-                <div class="card">
+                <div class="card " style="border: none">
                     <div class="card-body bg-graa">
 
                         <li class="list-group-item d-flex align-items-start bg-hvid rounded-5" style="padding: 20px;">
