--- a/Planet A.html
+++ b/Planet A.html
@@ -18,6 +18,8 @@
 
 <body class="bg-bgfarve">
 
+<div>
+
 <div class="container container-fluid m-0 d-flex">
     <div class=" d-flex">
         <a href="Planet%20A.html">
@@ -29,7 +31,7 @@
 <div class="container-fluid d-flex justify-content-lg-center justify-content-md-center ">
     <div class="row ">
         <div class="col-12 overskrift d-flex ms-lg-0 ms-md-3 ms-sm-5">
-            <h1 class="overskrift text-hvid display-1 d-flex mt-2 mb-3 pt-2 " style="font-size: clamp(3rem, 8vw, 25rem);">
+            <h1 class="overskrift text-hvid display-1 d-flex mt-2 mb-3 pt-2" style="font-size: clamp(3rem, 8vw, 25rem);">
                 Velkommen til <br class="d-sm-none"> Planet A
             </h1>
         </div>
@@ -61,7 +63,7 @@
         </div>
     </div>
 </div>
-
+</div>
 
 
 
