--- a/checkliste.html
+++ b/checkliste.html
@@ -67,14 +67,14 @@
 
             <div class="col-md-6 d-flex justify-content-center">
                 <div class="planet">
-                    <img src="image/Planet10002.webp" alt="planet" class="img-fluid">
+                    <img src="image/Planet1000%20copy.webp" alt="planet" class="img-fluid">
                 </div>
             </div>
 
 
             <div class="col-md-6">
 
-                <div class="card mb-3" style="border: none">
+                <div class="card mb-3 justify-content-center" style="border: none; width: 400px">
                     <div class="card-body bg-graa">
                         <h4 class="text-center text-hvid">Dagens klimamissioner</h4>
                     </div>
