--- a/underside.html
+++ b/underside.html
@@ -21,7 +21,8 @@
 
         /* Centraliser knappen i navbaren indtil 500px */
         .navbar .btn-outline-grå {
-            margin: 0 auto;
+            margin: 0;
+            padding: 0;
         }
 
         @media (max-width: 500px) {
@@ -38,47 +39,49 @@
     <nav class="navbar navbar-dark bg-bgfarve fixed-top border-white">
         <div class="container-fluid">
             <a href="#">
-                <img src="image/logo%20h.webp" alt="logo">
+                <img src="image/logolille.webp" alt="logo">
             </a>
             <!-- Synlig knap indtil 500px i midten af navbar -->
-            <button type="button" id="planet-btn" class="btn btn-outline-grå text-hvid btn-lg">Hjælp din planet</button>
+            <button type="button" id="planet-btn" class="btn btn-outline-graa text-hvid btn-lg">Hjælp din planet</button>
 
-            <li class="nav-item">
-                <!-- Offcanvas menu til dropdown -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
-                        aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                     aria-labelledby="offcanvasDarkNavbarLabel">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
-                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                                aria-label="Close"></button>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <!-- Offcanvas menu til dropdown -->
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+                            aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                         aria-labelledby="offcanvasDarkNavbarLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                <li class="nav-item">
+                                    <a class="nav-link active fs-4" aria-current="page" href="#">Min profil</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link fs-4" href="#">Find venner</a>
+                                </li>
+                                <!-- Hjælp din planet knap flyttes dynamisk til dropdown her -->
+                                <li class="nav-item">
+                                    <button class="btn btn-outline-grå text-hvid planet-menu-btn fs-4" style="display: none;">Hjælp din planet</button>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Min profil</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Find venner</a>
-                            </li>
-                            <!-- Hjælp din planet knap flyttes dynamisk til dropdown her -->
-                            <li class="nav-item">
-                                <button class="btn btn-outline-grå text-hvid planet-menu-btn" style="display: none;">Hjælp din planet</button>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </li>
+                </li>
+            </ul>
         </div>
     </nav>
 </div>
 
-<br><br><br>
+
 <div>
-    <h1 class="text-orange justify-content-center d-flex">1000</h1>
+    <h1 class="text-orange justify-content-center d-flex" style="margin-top:100px; ">1000</h1>
     <h3 class="text-hvid justify-content-center d-flex">Point</h3>
 </div>
 <div class="planet justify-content-center d-flex align-items-center">
@@ -86,8 +89,8 @@
 </div>
 <br>
 <div>
-    <div class="d-grid gap-2 col-lg-4 col-md-4 mx-auto">
-        <button class="btn btn-grøn text-hvid btn-lg" type="button">
+    <div class="d-grid gap-2 col-lg-5 col-md-8 col-sm-8 mx-auto">
+        <button class="btn btn-groen text-hvid btn-lg ms-5 me-5 fs-4" type="button">
             Dagens klimamissioner
         </button>
     </div>
