--- a/checkliste.html
+++ b/checkliste.html
@@ -80,7 +80,7 @@
             <!-- Venstre sektion -->
             <div class="col-md-6 d-flex justify-content-center">
                 <div class="planet">
-                    <img src="image/Planet1000%20copy.webp" alt="Billede af en planet" class="img-fluid">
+                    <img src="image/kigned.webp" alt="Billede af en planet" class="img-fluid">
                 </div>
             </div>
 
