--- a/Planet A.html
+++ b/Planet A.html
@@ -27,7 +27,7 @@
         </a>
     </div>
 </div>
-
+<header>
 <div class="container-fluid d-flex justify-content-lg-center justify-content-md-center ">
     <div class="row ">
         <div class="col-12 overskrift d-flex ms-lg-0 ms-md-3 ms-sm-5">
@@ -37,10 +37,11 @@
         </div>
     </div>
 </div>
-
+</header>
 <div class="container justify-content-lg-center">
+
     <div class="row">
-        <div class="col-lg-8 col-md-8 col-sm-12">
+        <article class="col-lg-8 col-md-8 col-sm-12">
             <h3 class="tekst text-hvid ms-lg-3">
                 Vær med til at passe på vores planet, der er kun en! <br> <br>
                 Planet A giver dig mulighed for at få større viden om hvordan vi kan passe på miljøet.
@@ -49,10 +50,10 @@
                 for at blive mere klima og miljø bevidst.<br>
                 Jo flere klimamissioner du klare, jo flere gladere bliver din planet og jo flere point får du.
             </h3>
-        </div>
+        </article>
 
 
-        <div class="col-lg-4 col-md-4 col-sm-12 d-flex flex-xl-column flex-lg-column flex-md-column flex-sm-row justify-content-center align-items-center">
+        <section class="col-lg-4 col-md-4 col-sm-12 d-flex flex-xl-column flex-lg-column flex-md-column flex-sm-row justify-content-center align-items-center">
             <a href="underside.html">
                 <button class="btn btn-graa text-hvid ms-lg-5 fs-4 ps-lg-4 pe-lg-4 pt-lg-3 pb-lg-3 mb-lg-5 ps-md-3 pe-md-3 pt-md-3 pb-md-3 mb-md-5 m-sm-4 m-2" type="button">Opret Profil</button>
             </a>
@@ -60,9 +61,19 @@
             <a href="underside.html">
                 <button class="btn btn-graa text-hvid ms-lg-5 fs-4 ps-lg-5 pe-lg-5 pt-lg-3 pb-lg-3 ps-md-5 pe-md-5 pt-md-3 pb-md-3 mb-md-5 m-sm-4 m-2" type="button">Log ind </button>
             </a>
-        </div>
+        </section>
     </div>
 </div>
+
+<footer class="container-fluid">
+    <div class="row">
+        <div class="col-6">
+            <h6 class="text-hvid mt-4 fw-light">Databeskyttelse</h6>
+        </div>
+        <div class="col-6">
+            <h6 class="text-hvid mt-4 fw-light justify-content-end d-flex">Kontakt</h6>
+        </div>
+</footer>
 </div>
 
 
