--- a/Planet A.html
+++ b/Planet A.html
@@ -45,10 +45,11 @@
             <h3 class="tekst text-hvid ms-lg-3">
                 Vær med til at passe på vores planet, der er kun en! <br> <br>
                 Planet A giver dig mulighed for at få større viden om hvordan vi kan passe på miljøet.
-                Du får uddelt din egen planet, som du har ansvaret for at passe på.<br> <br>
-                Hver dag får du klimamissioner, som er små eller større tiltag du kan gøre i din hverdag
-                for at blive mere klima og miljø bevidst.<br>
-                Jo flere klimamissioner du klare, jo flere gladere bliver din planet og jo flere point får du.
+                Du får uddelt din egen planet, som du har ansvaret for at gøre grønnere og gladere!<br> <br>
+                Du får en overskuelig tjekliste med daglige klimamissioner,
+                der gør en forskel i din hverdag og hjælper dig med at blive mere miljøbevidst. Fuldfør missionerne, tjek dem af, optjen point,
+                og se din planet trives som resultat af dine klimavenlige handlinger.<br>
+
             </h3>
         </article>
 
