--- a/underside.html
+++ b/underside.html
@@ -65,9 +65,9 @@
     <h3 class="text-hvid justify-content-center d-flex">Point</h3>
 </div>
 <div class="planet justify-content-center d-flex align-items-center">
-    <div class="planet">
-        <img src="image/Planet1000%20copy.webp" alt="Billede af en planet" class="img-fluid">
-    </div>
+    <video autoplay muted loop id="myVideo">
+        <source src="image/plany_4.mp4" type="video/mp4" class="img-fluid">
+    </video>
 </div>
 <br>
 <div>
